--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,7 +30,7 @@ jobs:
         with:
           platforms: linux/amd64,linux/arm64
           push: true
-          tags: zhuoqiw/ros-tis:0.14.0
-          cache-from: type=registry,ref=zhuoqiw/ros-tis:0.14.0
+          tags: crazylin007/ros-tis:0.14.0
+          cache-from: type=registry,ref=crazylin007/ros-tis:0.14.0
           cache-to: type=inline
 
